Display list of liked songs

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         </activity>
         <activity android:name=".SearchActivity" />
         <activity android:name=".PlaylistsActivity" />
-        <activity android:name=".LikedSongsActivity" />
+        <activity android:name=".likedsongs.LikedSongsActivity" />
         <activity android:name=".FollowedPodcastsActivity" />
         <activity android:name=".NowPlayingActivity" />
         <activity android:name="com.spotify.sdk.android.auth.LoginActivity"
