--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,5 @@ dependencies {
     implementation project(':spotify-app-remote-0.7.1') // Spotify app remote SDK
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.yashovardhan99.timeit:timeit:1.2.0' // Stopwatch for polling Spotify
+    implementation 'com.github.kaaes:spotify-web-api-android:0.4.1' // Spotify Web API
 }
