--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         <activity android:name=".SearchActivity" />
         <activity android:name=".likedsongs.LikedSongsActivity" />
         <activity android:name=".podcasts.FollowedPodcastsActivity" />
+        <activity android:name=".podcasts.PodcastDetailActivity" />
         <activity android:name=".NowPlayingActivity" />
         <activity android:name=".playlists.PlaylistsActivity" />
         <activity android:name="com.spotify.sdk.android.auth.LoginActivity"
